crates/rlp/tests/ui/transparent_invalid_shape.rs
use alloy_rlp::RlpEncodable;

#[derive(RlpEncodable)]
#[rlp(transparent)]
struct Bad {
    a: u8,
    b: u8,
}

fn main() {}
